--- a/room_game/hell/hell_service/pom.xml
+++ b/room_game/hell/hell_service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hell</artifactId>
         <groupId>com.wg</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,23 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wg</groupId>
-            <artifactId>hell_net</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.wg</groupId>
-            <artifactId>hell_event</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.wg</groupId>
             <artifactId>hell_domain</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.wg</groupId>
-            <artifactId>hell_common</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
