--- a/room_game/hell/pom.xml
+++ b/room_game/hell/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>room_game</artifactId>
         <groupId>com.wg</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hell</artifactId>
-
+    <packaging>pom</packaging>
     <modules>
         <module>hell_server</module>
         <module>hell_domain</module>
@@ -21,7 +21,6 @@
         <dependency>
             <groupId>com.wg</groupId>
             <artifactId>game_frame</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
