--- a/room_game/pom.xml
+++ b/room_game/pom.xml
@@ -7,13 +7,19 @@
     <groupId>com.wg</groupId>
     <artifactId>room_game</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>${revision}</version>
+
+
     <modules>
         <module>server_center</module>
         <module>hell</module>
         <module>room</module>
         <module>game_frame</module>
     </modules>
+
+    <properties>
+        <revision>1.0-SNAPSHOT</revision>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -33,7 +39,7 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
-                <version>4.1.5.Final</version>
+                <version>4.1.23.Final</version>
             </dependency>
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
@@ -48,8 +54,8 @@
             </dependency>
             <dependency>
                 <groupId>com.wg</groupId>
-                <artifactId>base_common</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <artifactId>game_frame</artifactId>
+                <version>${revision}</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
@@ -263,6 +269,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.6.2</version>
                     <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
