--- a/room_game/server_center/center_start/pom.xml
+++ b/room_game/server_center/center_start/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>server_center</artifactId>
         <groupId>com.wg</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>com.wg</groupId>
-            <artifactId>game_utils</artifactId>
+            <artifactId>game_frame</artifactId>
         </dependency>
         <dependency>
             <groupId>com.wg</groupId>
