--- a/room_game/server_center/service/pom.xml
+++ b/room_game/server_center/service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>server_center</artifactId>
         <groupId>com.wg</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.wg</groupId>
             <artifactId>game_frame</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
